<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/game_control" />

    <Button
        android:id="@+id/home_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="5dp"
        android:text="Home"
        app:layout_constraintEnd_toStartOf="@+id/details_button"
        app:layout_constraintStart_toEndOf="@+id/logo_image"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/details_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginRight="5dp"
        android:text="Details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/home_button"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/logo_image"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/game_title_textview"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="TextView"
            android:textSize="17dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/cover_imageview"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/platform_textview"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="TextView" />

        <TextView
            android:id="@+id/release_date_textview"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="TextView" />

        <TextView
            android:id="@+id/esrb_rating_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="TextView" />

        <TextView
            android:id="@+id/developer_textview"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="TextView" />

        <TextView
            android:id="@+id/publisher_textview"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="TextView" />

        <TextView
            android:id="@+id/genre_textview"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="TextView" />

        <TextView
            android:id="@+id/description_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="TextView"
            android:layout_marginVertical="15dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/game_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:textAlignment="center" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>