<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeItem"
        android:icon="@drawable/home"
        android:title="Home" />
    <item
        android:id="@+id/gameDetailsItem"
        android:icon="@drawable/baseline_videogame_asset_24"
        android:title="Game Details" />
</menu>